# beam

./: .gitignore  Cargo.toml  MyFirstBeamVideo.beam  README.md
.github/workflows/: release.yml
src/: animator.rs  ast.rs  beam.pest  gpu_renderer.rs  main.rs  parser.rs  renderer.rs
